# tamepad

./: .editorconfig  Cargo.toml  rustfmt.toml
configs/: default.json5  schema.json
src/: actions.rs  gui.rs  handle.rs  linux.rs  main.rs  sdl.rs  state.rs  types.rs
