[package]
name = "tamepad"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
sdl2 = { version = "0.36" }
input-linux = { version = "0.6", features = ["serde"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4"
schemars = { version = "0.8", features = ["indexmap2"] }
serde_json = "1.0"
fs_extra = "1.3"
lazy_static = "1.4.0"
strum = { version = "0.26", features = ["derive"] }
indexmap = "2.2"
femtovg = "0.9"
winit = { version = "0.29", features = ["rwh_05"] }
glutin-winit = "0.4"
glutin = "0.31"
raw-window-handle = "0.5"

